--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "vite build --base=/goit-js-hw-09/",
+    "build": "vite build --base=/ Soyakam-goit-js-hw-09 /",
     "preview": "vite preview"
   },
   "devDependencies": {
     "glob": "^8.1.0",
     "vite": "^4.5.2"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Andrii <freemail555@ukr.net>",
   "license": "ISC",
   "dependencies": {
     "basiclightbox": "^5.0.4",
