--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^8.1.0",
     "vite": "^4.5.2"
   },
-  "author": "Andrii <freemail555@ukr.net>",
+  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "basiclightbox": "^5.0.4",
