--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "build": "vite build --base=/ Soyakam-goit-js-hw-09 /",
+    "build": "vite build --base=/Soyakam-goit-js-hw-09/",
     "preview": "vite preview"
   },
   "devDependencies": {
